--- a/aman.html
+++ b/aman.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AMAN PORTFOLIO/title>
+    <title>AMAN.COM</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,16 +59,16 @@
     </section>
 
     <section>
-        <h2>Projects</h2>
+        <h2>ABOUT</h2>
 
         <div class="project">
-            <h3>Project 1</h3>
+            <h3>Project DONE</h3>
             <p>FRONT-END DEVELOPER OF COLLEGE WEBSITE</p>
         </div>
 
         <div class="project">
-            <h3>Project 2</h3>
-            <p>PORNHUB KE SABSE BADE SELLER AUR</p>
+            <h3>DESIGNATION</h3>
+            <p>CERTIFIED ETHICAL HACKER</p>
         </div>
 
         <!-- Add more projects as needed -->
